--- a/frontend/shared/sidebar_style.css
+++ b/frontend/shared/sidebar_style.css
@@ -11,14 +11,12 @@
 body {
   background: #F1F1F1;
 }
-
-
-nav .logo-name {
-  font-size: 22px;
-  font-weight: 500;
-  color: #333;
+.logo-image {
+    width: 100px; /* or whatever size you want */
+    height: auto;
+    display: block;
+    margin-left: 50px;
 }
-
 /* Sidebar */
 .sidebar {
   position: fixed;
@@ -29,17 +27,6 @@ nav .logo-name {
   background: #fff;
   box-shadow: 0 5px 1px rgba(0, 0, 0, 0.1);
   padding: 20px 0;
-}
-
-.sidebar .logo {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.sidebar .logo-name {
-  font-size: 20px;
-  font-weight: 500;
-  color: #333;
 }
 
 .sidebar-content {
@@ -88,3 +75,17 @@ main {
   margin-left: 200px; /* space for sidebar */
   padding: 100px 30px 30px 30px; /* leave space for navbar */
 }
+
+.logout-list {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+}
+
+.logout .nav-link {
+  color: #b36a2e !important;
+}
+.logout .icon {
+  color: #b36a2e !important;
+}
+
